--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "nuxt-gsap-module": "^1.5.0",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2"
   }
